# fanficgen

./: .gitignore  main.py  pyproject.toml
templates/: index.html
